syntax = "proto3";
option go_package = "./pb";
package evrelay;

message KeyEvent{
  int64 time = 1;
  uint32 key = 2;
  int32 type = 3;
  string keyStr = 4;
}

message Device{
  string name = 1;
}
message DeviceList{
  repeated Device devices = 1;
}

message Filter{
  repeated int32 acceptEvents = 1;
}


message Void{
}

service InputEvent{
  rpc ListKeyboards (Void) returns (DeviceList);
  rpc GetEvents (Filter) returns (stream KeyEvent);
}

